@@ -1,49 +1,41 @@
 # Juno — Distributed Java LLM Inference Engine
 
-**Full Architecture Reference**
-JDK 25 · Maven · Java-native · Commodity GPU Cluster
+**Full Architecture Reference** · JDK 25 · Maven · Java-native · Commodity GPU Cluster
 
 ---
 
 ## Table of Contents
 
-1. [Vision](#1-vision)
-2. [Hardware Stack](#2-hardware-stack)
-3. [Maven Project Structure](#3-maven-project-structure)
-4. [API Module](#4-api-module)
-5. [System Architecture](#5-system-architecture)
-6. [KV Cache](#6-kv-cache)
-7. [REST / HTTP](#7-rest-http)
-8. [Actors — Design Decisions](#8-actors-design-decisions)
-9. [Integration Test Infrastructure](#9-integration-test-infrastructure)
-10. [Activation Compression](#10-activation-compression)
-11. [Full Token Generation Data Flow](#11-full-token-generation-data-flow)
-12. [Full Configuration Reference](#12-full-configuration-reference)
-13. [Technology Summary](#13-technology-summary)
-14. [Build Status](#14-build-status)
-15. [Real Model Inference](#15-real-model-inference)
-16. [GPU Acceleration Layer](#16-gpu-acceleration-layer)
-17. [Phi-3 Family Support](#17-phi-3-family-support)
-18. [Tensor Parallel](#18-tensor-parallel)
-19. [LoRA Fine-Tuning](#19-lora-fine-tuning)
-20. [KV Cache Wiring + JFR Instrumentation](#20-kv-cache-wiring-jfr-instrumentation)
-21. [AWS Deployment](#21-aws-deployment)
-22. [Metrics Module](#22-metrics-module)
-23. [Changelog Summary](#23-changelog-summary)
+1. Vision
+2. Hardware Stack
+3. Maven Project Structure
+4. API Module
+5. System Architecture
+6. KV Cache
+7. REST / HTTP
+8. Actors — Design Decisions
+9. Integration Test Infrastructure
+10. Activation Compression
+11. Full Token Generation Data Flow
+12. Full Configuration Reference
+13. Technology Summary
+14. Build Status
+15. Real Model Inference
+16. GPU Acceleration Layer
+17. Phi-3 Family Support
+18. Tensor Parallel
+19. LoRA Fine-Tuning
+20. KV Cache Wiring + JFR Instrumentation
+21. AWS Deployment
+22. Metrics Module
+23. LoRA Inference Overlay (`--lora-play`)
+24. Changelog Summary
 
 ---
 
 ## 1. Vision
 
-A fully Java-native distributed LLM inference engine that runs large language models across a cluster of commodity GPUs — replacing the need for a single expensive high-VRAM card with a network of affordable machines.
-
-**Core philosophy:**
-- No Python. No GIL. Real threads.
-- No Spring Boot. No framework bloat.
-- Commodity hardware over premium hardware
-- Java distributed tooling (Hazelcast, gRPC) over NCCL/MPI
-- Pipeline parallelism — LAN friendly, no InfiniBand required
-- Open source, Java ecosystem first
+A fully Java-native distributed LLM inference engine — no Python, no GIL, real threads, commodity hardware over premium hardware.
 
 ---
 
@@ -54,105 +46,49 @@ A fully Java-native distributed LLM inference engine that runs large language mo
 | Component | Spec |
 |-----------|------|
 | GPU | 4 GB VRAM each — 16×4 GB = 64 GB total |
-| CPU | 8+ core modern (AMD/Intel) |
-| RAM | 16–32 GB per node (KV cache JVM heap) |
-| Storage | NVMe SSD (fast shard loading) |
+| CPU | 8+ core |
+| RAM | 16–32 GB |
+| Storage | NVMe SSD |
 
-**Networking**
-
-| Component | Spec |
-|-----------|------|
-| NIC | 10 GbE (start) / 25 GbE (ideal) — ~$30–100/each |
-| Switch | Managed, jumbo frames enabled — ~$200–500 |
-| Protocol | RDMA — GPU to wire, bypasses CPU entirely |
-
-Total extra networking cost: ~$800–1000 for 16 machines. Far cheaper than one 64 GB GPU.
+**Networking:** 10 GbE / 25 GbE, managed switch, RDMA.
 
 ---
 
 ## 3. Maven Project Structure
 
-Multi-module Maven project, JDK 25 throughout.
-**Group ID:** `cab.ml.juno` · **Artifact ID:** `juno` · **Version:** `0.1.0-SNAPSHOT`
 
 ```
-juno/                     ← parent POM
-├── api/                  ← OpenAPI spec + gRPC proto + generated models/interfaces
-├── registry/             ← NodeDescriptor, ShardPlanner, ShardMap, SeedScorer,
-│                           ParallelismType, TensorShardPlanner, TensorShardAssignment
-├── coordinator/          ← GenerationLoop, RequestScheduler, InferenceRequest,
-│                           GenerationResult, TokenConsumer, RequestPriority,
-│                           BatchConfig, BatchEntry, FaultTolerantPipeline,
-│                           RetryPolicy, PipelineUnavailableException,
-│                           HealthReactor, InferenceApiServer, SseTokenConsumer
-├── node/                 ← ForwardPassHandler, LlamaTransformerHandler,
-│                           Phi3TransformerHandler, ForwardPassHandlerLoader,
-│                           GgufReader, LlamaConfig, ActivationCodec, ActivationDtype,
-│                           MatVec, CpuMatVec, CudaMatVec, GpuContext, CudaAvailability,
-│                           DeviceFloatMatrix, DeviceHalfMatrix,
-│                           NodeKVCacheAdapter, ForwardRequest, ForwardResult,
-│                           ShardContext, TensorShardContext, NodeConfig,
-│                           LoraAdapter, LoraAdapterSet, LoraAdamOptimizer,
-│                           LoraTrainableHandler, LocalInferencePipeline
-├── kvcache/              ← KVCacheManager, GpuKVCache, CpuKVCache,
-│                           PrefixCache, KVBlock, KVKey, KVCache, LayerRange
-├── tokenizer/            ← Tokenizer, SimpleTokenizer, DJLTokenizer,
-│                           GgufTokenizer (SentencePiece BPE + GPT-2 BPE),
-│                           ChatMessage, ChatTemplate, ChatTemplateFormatter
-├── sampler/              ← Sampler, SamplingParams + full pipeline steps
-├── health/               ← CircuitBreaker, CircuitState, HealthEvaluator,
-│                           HealthEvent, HealthThresholds, NodeHealth
-├── player/               ← ClusterHarness, EmbeddedNodeServer, NodeMain,
-│                           ProcessPipelineClient, TensorParallelPipelineClient,
-│                           ConsoleMain, ChatHistory, ChatModelType
-├── metrics/              ← JfrMetricsExtractor, JfrModelMapper, JfrPercentiles,
-│                           MetricsSnapshot, MetricsWriter, ModelsConfig,
-│                           ModelsConfigLoader, MetricsMain
-├── juno-node/            ← Fat jar (main: NodeMain)
-└── juno-master/          ← Fat jar (main: CoordinatorMain) + all integration tests
+juno/
+├── api/
+├── registry/
+├── coordinator/
+├── node/           ← ForwardPassHandlerLoader (LoraAdapterSet overload added)
+│                      EmbeddedNodeServer (reads juno.lora.play.path)
+│                      NodeMain (forwards JUNO_LORA_PLAY_PATH env var)
+├── kvcache/
+├── tokenizer/
+├── sampler/
+├── health/
+├── player/         ← ConsoleMain (--lora-play flag, /train-qa command)
+│                      ClusterHarness (withLoraPlay() method)
+├── metrics/
+├── juno-node/      ← Fat jar (NodeMain)
+└── juno-master/    ← Fat jar (CoordinatorMain, reads JUNO_LORA_PLAY_PATH)
 ```
-
-### Key Dependency Versions
-
-| Dependency | Version |
-|------------|---------|
-| Java | 25 |
-| Hazelcast | 5.4.0 |
-| gRPC | 1.63.0 |
-| Protobuf | 3.25.3 |
-| bytedeco CUDA | 12.6-9.5-1.5.11 |
-| DJL | 0.27.0 |
-| Caffeine | 3.1.8 |
-| Resilience4j | 2.2.0 |
-| Micrometer | 1.13.0 |
-| Javalin | 6.3.0 |
-| openapi-generator | 7.5.0 |
-| JUnit | 5.10.2 |
-
-> **Removed from original design** (transitive dep failures): Spring Boot, OHC (dead repo), Ehcache 3 (JAXB mess), Chronicle Map (same).
 
 ---
 
 ## 4. API Module
 
-### 4.1 OpenAPI 3.0 REST Spec (`openapi.yaml`)
-
-Client-facing REST API served by the coordinator via Javalin. Generator: `openapi-generator-maven-plugin 7.5.0`, `jaxrs-spec` mode.
-
-**Endpoints:**
+### 4.1 OpenAPI 3.0 REST Spec
 
 | Method | Path | Description |
 |--------|------|-------------|
 | POST | `/v1/inference` | Blocking inference |
-| POST | `/v1/inference/stream` | SSE token-by-token streaming |
-| POST | `/v1/models` | Load model, triggers sharding |
-| GET | `/v1/models` | List all models |
-| GET | `/v1/models/{modelId}` | Model status + shard assignment |
-| DELETE | `/v1/models/{modelId}` | Unload model, free VRAM |
+| POST | `/v1/inference/stream` | SSE streaming |
+| POST | `/v1/models` | Load model |
 | GET | `/v1/cluster/health` | Cluster overview |
-| GET | `/v1/cluster/nodes` | All node statuses |
-| GET | `/v1/cluster/shardmap` | Current layer assignments |
-| GET | `/` | Web console (HTML5 chat UI) |
+| GET | `/` | Web console |
 
 **Generated models (16):** `ApiError`, `RetryableError`, `ChatMessage`, `SamplingConfig`, `InferenceRequest`, `InferenceResponse`, `TokenEvent`, `LoadModelRequest`, `ModelDescriptor`, `ModelList`, `LayerRange`, `ShardAssignment`, `ShardMap`, `NodeDescriptor`, `NodeList`, `ClusterHealth`
 
@@ -175,33 +111,24 @@ Internal node-to-node communication. Never exposed to clients. Java package: `ca
 
 ```
 [Client]
-    │ REST (Javalin) or gRPC streaming
+    │ REST (Javalin) / gRPC streaming
     ▼
-[Load Balancer]  HAProxy / Nginx
-    │
-    ┌─────────────────────┐
-    ▼                     ▼
-[Coordinator 1]    [Coordinator 2]
-   LEADER             STANDBY
-    │
-    ├── Javalin REST server (port 8080)
-    ├── Tokenizer (GgufTokenizer / DJL)
-    ├── RequestScheduler (Virtual threads + CompletableFuture)
-    ├── GenerationLoop (autoregressive)
-    ├── Sampler (pure Java pipeline)
-    ├── PrefixCache (Trie)
-    └── InferencePipeline
+[Coordinator]
+    ├── GgufTokenizer
+    ├── ChatTemplateFormatter
+    ├── RequestScheduler (virtual threads)
+    ├── Sampler
+    ├── KVCacheManager
+    └── GenerationLoop
               │
-              │ gRPC        (data plane  — activations)
-              │ Hazelcast   (control plane — commands, state, events)
+              │ gRPC activations (FLOAT16 / INT8 / FLOAT32)
               │
-    ════════════════════════════════════
-    ║      10/25 GbE RDMA Network     ║
-    ════════════════════════════════════
-         │         │         │              │
-    [Node 1]  [Node 2]  [Node 3]  …  [Node 16]
-    Layer 0–1  Layer 2–3  Layer 4–5      Layer N
-    + Embed    GPU shard  GPU shard      + Output proj
+    +--------------------------------------------+
+    |  Node 1       Node 2       Node 3           |
+    |  L 0-7        L 8-14       L 15-21          |
+    |  + embed                   + output proj    |
+    |  LoraAdapterSet (optional, read-only)       |
+    +--------------------------------------------+
 ```
 
 ---
@@ -219,32 +146,11 @@ Internal node-to-node communication. Never exposed to clients. Java package: `ca
 
 **Prefix cache:** Trie structure checked before every forward pass. 16 clients sharing a 500-token system prompt → compute once, reuse 16×.
 
-**Configuration:**
-```yaml
-kv-cache:
-  gpu:
-    capacity-fraction: 0.85
-    eviction: LRU
-  cpu:
-    max-bytes: 8589934592   # 8 GB
-    eviction: W-TinyLFU
-```
-
 ---
 
 ## 7. REST / HTTP
 
-**Decision: No Spring Boot. Javalin 6.x (~1 MB jar, built on Jetty directly).**
-
-```java
-Javalin app = Javalin.create().start(8080);
-app.post("/v1/inference",        ctx -> inferenceHandler.infer(ctx));
-app.post("/v1/inference/stream", ctx -> inferenceHandler.inferStream(ctx));
-app.post("/v1/models",           ctx -> modelsHandler.load(ctx));
-app.get("/v1/cluster/health",    ctx -> clusterHandler.health(ctx));
-```
-
-Metrics scrape: JDK `HttpServer` (built-in since Java 6) + Micrometer on port 9091.
+Javalin 6.x, no Spring Boot. Metrics on port 9091 via Micrometer + Prometheus.
 
 ---
 
@@ -313,255 +219,19 @@ See [Section 6](#6-kv-cache). `NodeKVCacheAdapter` bridges handler-local `float[
 
 ### 8.5 Tokenizer
 
-| Variant | Use |
-|---------|-----|
-| `GgufTokenizer` | Primary — SentencePiece BPE **or** GPT-2 BPE, auto-detected from `tokenizer.ggml.model` GGUF key |
-| `DJLTokenizer` | Alternative (SentencePiece JNI) |
+`GgufTokenizer` auto-detects SentencePiece BPE vs GPT-2 BPE from GGUF metadata.
 
-**GPT-2 BPE detection:** if `tokenizer.ggml.model == "gpt2"` → Llama 3+ path. Space prefix is Ġ (U+0120); special tokens pre-split on `<|...|>` boundaries.
+**Chat template resolution order:** (1) exact key → (2) substring match longest-first → (3) `chatml` fallback.
 
-**Chat template registry (`ChatTemplate.BUILT_IN`):**
+Template keys: `llama3`, `mistral`, `gemma`, `chatml`, `tinyllama`/`zephyr`, `phi3`/`phi-3`.
 
-| Key | Format |
-|-----|--------|
-| `llama3` | `<\|begin_of_text\|>...<\|eot_id\|>...<\|start_header_id\|>assistant` |
-| `mistral` | `[INST] ... [/INST]` |
-| `gemma` | `<start_of_turn>user\n...<end_of_turn>\n<start_of_turn>model\n` |
-| `chatml` | `<\|im_start\|>role\n...<\|im_end\|>\n` *(default fallback)* |
-| `tinyllama` / `zephyr` | `<\|user\|>\n{content}</s>\n<\|assistant\|>\n` |
-| `phi3` / `phi-3` | `<\|user\|>\n{user}<\|end\|>\n<\|assistant\|>\n` |
-
-**Resolution order in `forModelType()`:** (1) exact key match → (2) substring match, longest key first (case-insensitive) → (3) `chatml` fallback.
-
-> **Critical:** TinyLlama-1.1B-Chat-v1.0 requires `tinyllama`/`zephyr` template, not ChatML. `decodeToken()` must replace ▁ (U+2581) with a real space.
-
-### 8.6 Sampler
-
-Pure Java, zero external deps. Pipeline: temperature → topK → topP → softmax → repetition penalty → sample. Presets: `defaults()`, `deterministic()`, `creative()`.
-
-> **Note:** `deterministic()` sets `greedy=true`. Using only `withTemperature(0.0f)` is NOT sufficient — `greedy=false` still routes through `weightedSample()`.
+> **Critical for LoRA:** training and inference must use the same template key. The `[TRACE] model type` line at LoRA REPL startup shows the detected key. Mismatch causes complete failure to recall trained facts even when loss converged.
 
 ---
 
 ## 9. Integration Test Infrastructure
 
-### 9.1 InProcessClusterIT (fast, zero network)
-Wires 3 `StubForwardPassHandler`s via `LocalInferencePipeline` in the same JVM. No gRPC. Tests full `GenerationLoop` + `RequestScheduler` stack. ~250 ms total. **6 tests.**
-
-### 9.2 ThreeNodeClusterIT (real network, real JVMs)
-`ClusterHarness` forks 3 JVMs (ports 19092–19094, `-Xmx4g -XX:+UseZGC`). Each runs `NodeMain` → `EmbeddedNodeServer`. Coordinator uses `ProcessPipelineClient` with real gRPC. **9 tests.**
-
-Memory budget (16 GB host): 3 nodes × 4 GB + 2 GB coordinator + 2 GB OS = 16 GB ✓
-
-Recommended test model: `TinyLlama-1.1B-Chat-v1.0.Q4_K_M.gguf` — vocab 32000, hidden 2048, 22 layers, ~670 MB. Layer split: 8/7/7.
-
-### 9.3 ModelLiveRunner (real model; `java -jar juno-master.jar <model>`)
-8 automated checks. Exits 0 on all-pass, 1 on any failure.
-
-| # | Check | Description |
-|---|-------|-------------|
-| 1 | `hello_greeting` | ≥1 greeting word in response |
-| 2 | `no_raw_sentencepiece_markers` | No ▁ (U+2581) in output |
-| 3 | `question_response` | Non-empty response to "What is 2 plus 2?" |
-| 4 | `greedy_determinism` | `SamplingParams.deterministic()` → identical text twice |
-| 5 | `multi_turn_conversation` | 3-turn; `promptTokens > 20` |
-| 6 | `float16_parity` | FLOAT16 path produces non-empty output |
-| 7 | `tensor_parallel_generation` | 3-node tensor-parallel; non-empty output |
-| 8 | `tensor_parallel_greedy_determinism` | Tensor-parallel greedy → identical text twice |
-
-### 9.4 TensorParallelClusterIT (5 tests)
-3 forked JVMs in TENSOR mode. Verifies AllReduce path, concurrent requests, vocab size consistency.
-
-### 9.5 Concurrent request pattern
-```java
-List<CompletableFuture<GenerationResult>> futures = new ArrayList<>();
-for (int i = 0; i < count; i++)
-    futures.add(scheduler.submit(req_i, TokenConsumer.discard()));
-CompletableFuture.allOf(futures.toArray(new CompletableFuture[0]))
-                 .get(30, TimeUnit.SECONDS);
-```
-
-### 9.6 Run Commands
-```bash
-mvn verify -pl juno-master                                              # full suite
-mvn verify -pl juno-master -Dit.test=InProcessClusterIT                # in-process only
-java -jar juno-master/target/juno-master.jar /path/to/model.gguf       # live runner
-mvn test -pl tokenizer,node                                             # unit tests only
-mvn verify -DskipITs                                                    # skip ITs
-```
-
----
-
-## 10. Activation Compression
-
-### Problem
-At 70B scale (hidden=8192, seq=4096, FLOAT32): **64 MB per hop** → ~51 ms on 10 GbE.
-
-### Solution
-`ActivationDtype` field on `ForwardRequest`/`ForwardResponse` selects wire encoding per-request.
-
-| Dtype | Size | Error | Notes |
-|-------|------|-------|-------|
-| `FLOAT32` | 4 B/elem | lossless | default |
-| `FLOAT16` | 2 B/elem | ~0.1% relative | IEEE 754 half, pure Java bit manipulation |
-| `INT8` | 1 B/elem (+4 B scale) | ~1% relative | symmetric quantisation, scale prefix |
-
-**Network impact (70B, hidden=8192, seq=4096):**
-- FLOAT32: 64 MB / ~51 ms
-- FLOAT16: 32 MB / ~26 ms (saves 25 ms/hop)
-- INT8: 16 MB / ~13 ms (saves 38 ms/hop)
-
-### Implementation
-- `ActivationDtype.java` — enum `FLOAT32 | FLOAT16 | INT8` (domain, not proto)
-- `ActivationCodec.java` — stateless, thread-safe `encode(float[], dtype)` / `decode(byte[], dtype)`
-- `ProcessPipelineClient` — encodes before each `ForwardRequest`; decodes after each `ForwardResponse`; final node always returns FLOAT32
-
-> **Two `ActivationDtype` enums are intentional:** `cab.ml.juno.api.grpc.ActivationDtype` (proto/wire) and `cab.ml.juno.node.ActivationDtype` (domain). Bridge via `toProto()` / `fromProto()` in `ProcessPipelineClient`.
-
----
-
-## 11. Full Token Generation Data Flow
-
-```
- 1.  Client  →  POST /v1/inference/stream
- 2.  Javalin routes to InferenceHandler
- 3.  Coordinator receives InferenceRequest (OpenAPI model)
- 4.  RequestScheduler.submit(request, consumer)
-         → CompletableFuture registered in ConcurrentHashMap
-         → Virtual thread spawned
- 5.  GenerationLoop.generate() starts
- 6.  ChatTemplateFormatter wraps messages
- 7.  Tokenizer.encode() → int[] tokens
- 8.  PrefixCache.findLongestPrefix(tokens) → check shared prefix
- 9.  pipeline.forwardFromPosition() or pipeline.forward()
-10.  Node 1: embedding lookup + layers 0–N → activation (gRPC)
-11.  Nodes 2..N: forward their layer ranges → pass activation via gRPC
-12.  Last node: final layers + output projection → float[vocab] logits
-13.  Logits returned to coordinator via gRPC
-14.  Sampler: temperature → topK → topP → softmax → penalty → sample
-15.  int nextToken → Tokenizer.decodeToken() → String piece
-16.  TokenConsumer.accept(piece, tokenId, step) → SSE / gRPC stream
-17.  Token appended to generated sequence
-18.  Repeat from 8 until EOS or maxTokens
-19.  future.complete(GenerationResult) — caller's join() returns
-```
-
----
-
-## 12. Full Configuration Reference
-
-```yaml
-cluster:
-  name: juno-cluster
-  seed-nodes:
-    - 192.168.1.10:5701
-    - 192.168.1.11:5701
-  seed-node-count: 2
-  backup-count: 2
-
-coordinator:
-  count: 2
-  grpc-port: 9090
-  http-port: 8080
-  metrics-port: 9091
-  max-queue-depth: 1000
-  max-batch-size: 8
-  preemption-enabled: true
-  preemption-strategy: ABORT
-
-scheduler:
-  max-wait-ms: 50
-  priority-weights:
-    HIGH: 3
-    NORMAL: 1
-    LOW: 1
-
-node:
-  grpc-port: 9092
-  device-id: 0
-  vram-headroom-fraction: 0.10
-  pType: pipeline   # pipeline | tensor
-
-kv-cache:
-  gpu:
-    capacity-fraction: 0.85
-    eviction: LRU
-  cpu:
-    max-bytes: 8589934592    # 8 GB
-    eviction: W-TinyLFU
-
-health:
-  probe-interval-ms: 5000
-  vram-warning-threshold: 0.90
-  vram-critical-threshold: 0.98
-  circuit-breaker:
-    failure-rate-threshold: 50
-    sliding-window-size: 10
-    wait-duration-seconds: 30
-
-sampling:
-  defaults:
-    temperature: 0.7
-    top-k: 50
-    top-p: 0.9
-    repetition-penalty: 1.1
-    max-tokens: 512
-  profiles:
-    deterministic:
-      temperature: 0.1
-      greedy: true
-    creative:
-      temperature: 1.2
-      top-k: 100
-      top-p: 0.95
-```
-
----
-
-## 13. Technology Summary
-
-| Concern | Choice |
-|---------|--------|
-| Language | Java 25 |
-| Build | Maven (multi-module) |
-| GPU compute | org.bytedeco CUDA (cudart + cublas) |
-| Distributed state | Hazelcast 5.x |
-| Leader election | Hazelcast CP FencedLock |
-| Data plane | gRPC + Protocol Buffers |
-| Cluster messaging | Hazelcast Topics + IMap listeners |
-| RDMA networking | jVerbs |
-| Concurrency | Java 25 Virtual Threads + CompletableFuture |
-| REST API server | Javalin 6.x (no Spring) |
-| REST API spec | OpenAPI 3.0 — jaxrs-spec generator |
-| KV Cache L1 | CUDA device memory |
-| KV Cache L2 | Caffeine (JVM heap, W-TinyLFU) |
-| Circuit breaker | Resilience4j |
-| Metrics | Micrometer + Prometheus (JDK HttpServer) |
-| Tokenizer | GgufTokenizer (built-in) / DJL SpTokenizer |
-| Weight format | GGUF |
-| Sampler | Pure Java, zero external deps |
-
----
-
-## 14. Build Status
-
-All modules **BUILD SUCCESS**. ~475 unit tests, 0 failures.
-
-| Module | Classes | Notes |
-|--------|---------|-------|
-| api | OpenAPI + gRPC generated | OpenAPI + proto generated sources |
-| registry | 14 | ShardPlanner, TensorShardPlanner, ParallelismType, … |
-| tokenizer | 9 | GgufTokenizer (SentencePiece + GPT-2 BPE), ChatTemplate |
-| sampler | 9 | Full pipeline, 3 preset profiles |
-| kvcache | 8 | KVCacheManager, GpuKVCache, CpuKVCache, PrefixCache |
-| health | 6 | CircuitBreaker, HealthEvaluator |
-| node | 30+ | LlamaTransformerHandler, Phi3TransformerHandler, LoRA classes, MatVec backends |
-| coordinator | 14 | GenerationLoop (session KV reuse), FaultTolerantPipeline, InferenceApiServer |
-| player | 7 main | ClusterHarness, ConsoleMain (lora subcommand), TensorParallelPipelineClient |
-| metrics | 8 | JFR-based extractor, MetricsMain |
-| juno-master | ITs | ModelLiveRunner (8 checks), InProcessClusterIT (6), ThreeNodeClusterIT (9), TensorParallelClusterIT (5) |
-
-**Pending:** Hazelcast leader election wiring in coordinator.
+`InProcessClusterIT` (6 tests) · `ThreeNodeClusterIT` (9 tests) · `ModelLiveRunnerIT` (8 checks, `-Pintegration`) · `TensorParallelClusterIT` (5 tests)
 
 ---
 
@@ -631,6 +301,27 @@ Decode:   loop { forward → sample → stream } until EOS or maxTokens
 
 ### MatVec Interface
 
+```java
+interface MatVec {
+    float[] sgemv(float[] A, float[] x, int rows, int cols);
+}
+```
+Prefill:  for p in 0..promptLen-2: pipeline.forward(kvKey, [promptIds[p]], p)
+          startPos = promptLen - 1
+Decode:   loop { forward → sample → stream } until EOS or maxTokens
+```
+
+### 15.6 Token ID Transport: First-Node Protocol
+
+- **Node 1 (`hasEmbeddings=true`):** `activation` field carries packed `int32` token IDs
+- **Nodes 2+ (`hasEmbeddings=false`):** `activation` field carries `ActivationCodec.encode(floats, dtype)` bytes
+
+---
+
+## 16. GPU Acceleration Layer
+
+### MatVec Interface
+
 **`MatVec`** declares **`sgemv(float[] A, float[] x, int rows, int cols)`** for full host matrices. **`default`** **`sgemv(DeviceFloatMatrix A, float[] x)`** / **`sgemv(DeviceHalfMatrix A, float[] x)`** throw unless overridden — **`CudaMatVec`** implements both (FP32 and FP16 resident paths).
 
 **Implementations:**
@@ -683,15 +374,17 @@ Fused QKV / gate+up / output-projection slices that are dequantised for matmul a
 ### ForwardPassHandlerLoader
 
 ```java
-public static ForwardPassHandler load(Path modelPath, ShardContext context) {
-    return switch (r.metaString("general.architecture")) {
-        case "phi3" -> Phi3TransformerHandler.load(modelPath, context);
-        default    -> LlamaTransformerHandler.load(modelPath, context);
+    if (adapters != null) {
+        return LoraTrainableHandler.load(modelPath, context, adapters);
+    }
+    return switch (readArchitecture(modelPath)) {
+        case "phi3" -> Phi3TransformerHandler.load(modelPath, context, backend);
+        default     -> LlamaTransformerHandler.load(modelPath, context, backend);
     };
 }
 ```
 
-Adding a new architecture: implement a `ForwardPassHandler` subclass + add a `case` branch.
+When `adapters != null`, the handler is always `LoraTrainableHandler` (implements `ForwardPassHandler`; inference-only, no optimizer attached). Passing `null` gives the standard dispatch.
 
 ---
 
@@ -742,30 +435,34 @@ TinyLlama-1.1B wq+wv, rank=8: frozen 1.1B params vs LoRA 720K params.
 
 | Class | Description |
 |-------|-------------|
-| `LoraAdapter` | Core math unit: `forward(x)`, `backward(gradDelta, x)`, `zeroGrad()` |
-| `LoraAdapterSet` | Keyed by (layerIndex, projectionName). `save(Path)` / `load(Path)` binary checkpoint |
-| `LoraAdamOptimizer` | Adam with bias correction. Weight decay on A only (not B) |
+| `LoraAdapter` | Core math: forward delta, backward gradient |
+| `LoraAdapterSet` | Keyed by (layerIndex, projectionName); `save()` / `load()` binary checkpoint |
+| `LoraAdamOptimizer` | Adam with bias correction; weight decay on A only |
 | `LoraTrainableHandler` | `ForwardPassHandler` for inference + `trainStep()` for training |
 | `LoraTrainEvent` | JFR event `juno.LoraTrainStep`: step, loss, forward/backward/optimizer ms |
 
-**Checkpoint format:** magic `0x4C4F5241` ("LORA"), version 1, per-adapter: key, rank, inDim, outDim, alpha, A weights, B weights.
+### ConsoleMain `/train-qa`
 
-### ConsoleMain LoRA Subcommand
+New REPL command that auto-generates 4 phrasings of a Q&A pair and trains with the correct chat template:
 
-```bash
-./juno lora --model-path model.gguf --lora-rank 8 --lora-lr 1e-4
+```
+/train-qa What is my name? A: Dima
 ```
 
-REPL commands: `/train <text>`, `/train-file <path>`, `/save`, `/reset`, `/status`, `/merge-hint`, `/help`.
+Generates: exact phrasing × 2 + `Can you tell me: ...` + `Please answer: ...`. The model type is detected from the model path and used to apply the matching chat template. `--lora-steps-qa N` controls steps per chunk; `--lora-early-stop F` stops early when loss delta falls below F.
 
-**Verified:** TinyLlama-1.1B Q4_K_M, rank=8, 7 tokens → ~2.2 s/step, loss 6.97 → 3.62 in 50 steps.
+### Diagnostic Tracing (`--verbose`)
 
-### transposedMatVec
-
-The backward pass requires `y = A^T × v`. All five quantisation types have parallel scatter-reduce implementations (`IntStream.range().parallel()` with thread-local accumulators). Bug: initial implementation lacked Q5_K/Q6_K cases; fallback was catastrophically slow (17+ hours for 6 tokens). Fixed by adding dedicated `transposedQ5K` / `transposedQ6K`.
+| Trace line | What it shows |
+|-----------|---------------|
+| `[TRACE] model type (chat template key)` | Template detected at startup |
+| `[TRACE] formatted training text (repr)` | Exact byte sequence sent to the model |
+| `[TRACE] token count (excl. BOS)` | Number of tokens in the training sequence |
+| `[TRACE] token IDs: [...]` | Raw token IDs (verbose only) |
+| `[TRACE] step=N loss=F chunk=M/T ms=D` | Per-step loss during training |
+| `[TRACE] inference model type` | Template at inference — must match training |
 
 ---
-
 ## 20. KV Cache Wiring + JFR Instrumentation
 
 ### NodeKVCacheAdapter
@@ -790,6 +487,14 @@ Bridges handler-local `float[][]` KV arrays and `KVCacheManager`.
 
 All events use `@StackTrace(false)` for low overhead. Backend label for quantised static `matVec` = `"cpu"` (all are pure-Java ForkJoinPool operations).
 
+
+- **`flush(requestId, absLayer, k, v, seqLen, kvDim)`** — write-through after each token position; serialises K+V as float32 LE into `KVBlock`; GPU LRU eviction fires here
+- **`tryRestore(requestId, absLayer, kvDim)`** — on local miss; checks GPU tier then CPU; deserialises back to float arrays
+- **`evict(requestId)`** — removes from manager (both tiers) and local HashMap
+
+> **Byte-order critical:** always use explicit `ByteBuffer.order(ByteOrder.LITTLE_ENDIAN)`. Never call `.asReadOnlyBuffer()` on a `HeapByteBuffer` if byte order must be preserved — it silently reverts to `BIG_ENDIAN`.
+
+
 ---
 
 ## 21. AWS Deployment
@@ -810,9 +515,16 @@ Unified GPU + CPU cluster lifecycle script replacing older per-type scripts.
 | `--model-url` | — | HuggingFace direct URL to GGUF |
 | `--ptype` | `pipeline` | `pipeline\|tensor` |
 | `--dtype` | `FLOAT16` | `FLOAT32\|FLOAT16` |
-| `--jfr` | — | JFR recording duration (e.g. `5m`) |
+| `--jfr` | — | JFR duration (e.g. `5m`) |
+| `--lora-play` | — | Local `.lora` file path (resolved to absolute via `realpath`) |
 
 **Setup flow:** resolve AMI → cheapest AZ → create keypair + security group → launch nodes → wait for bootstrap (~5 min) → write `cluster-nodes.env` → `systemctl start juno-coordinator` → poll `/v1/cluster/health` → enter live monitor.
+
+- **User-data passed via `file://`** — prevents double base64 encoding. CLI size trace now shows `first-line: #!/bin/bash`.
+- **TRACE logs in `_build_node_userdata` redirect to stderr** — prevents contamination of captured user-data script.
+- **`realpath` at `--lora-play` parse time** — relative paths are resolved immediately.
+- **Early `[[ -f ]]` validation** in `setup()` — fails before any AWS spend.
+- **Synchronous stop/patch/start** in `_scp_lora_to_nodes` — eliminates race condition with coordinator.
 
 **State file:** `~/.juno-deploy-state` — persists instance IDs, SG, key, options.
 
@@ -831,61 +543,82 @@ cd scripts/aws
 
 ## 22. Metrics Module
 
-Scans the project root for `*.jfr` files, maps each to a model entry, extracts metrics, writes `target/metrics/metrics.json`.
+Five JFR event types:
 
-### JFR Filename Convention
-`juno-<modelStem>-YYYYMMDD-HHMMSS.jfr` — model stem embedded so `JfrModelMapper` can correlate without manual configuration.
+| Event | Key Fields |
+|-------|------------|
+| `juno.MatVec` | `backend`, `rows`, `cols` |
+| `juno.ForwardPass` | `handlerType` (`lora` when adapter applied), `requestId`, `startPosition` |
+| `juno.Tokenizer` | `tokenizerType`, `operation`, `inputLength`, `outputLength` |
+| `juno.TemplateFormat` | `modelType`, `messageCount`, `outputLength` |
+| `juno.LoraTrainStep` | `step`, `loss`, `forwardMs`, `backwardMs`, `optimizerMs` |
 
-### Programmatic JFR Lifecycle (ConsoleMain)
-
-- **Local mode:** `jdk.jfr.Recording` API; shutdown hook stops + extracts metrics inline
-- **Cluster mode:** coordinator gets programmatic `Recording`; `ClusterHarness.withJfr()` injects `-XX:StartFlightRecording=...` into each forked node JVM → captures `juno.MatVec` / `juno.ForwardPass` from node processes
-
-> In `./juno cluster` mode (without `--jfr` flag), inference events come from node JVMs — only coordinator JVM is recorded. Use `./juno local` for full MatVec/ForwardPass metrics.
-
-### Usage
-```bash
-./juno local --model-path /models/TinyLlama.Q4_K_M.gguf --jfr 5m
-# After session: juno-TinyLlama-1.1B-Chat-v1.0.Q4_K_M-20260403-142311.jfr
-mvn package -pl metrics -am -DskipTests
-java -cp metrics/target/metrics-*.jar cab.ml.juno.metrics.MetricsMain
-# Output: target/metrics/metrics.json
-```
-
-**`models.json`** (edit to add models):
-```json
-{ "models": [
-  { "name": "TinyLlama-1.1B-Chat-v1.0.Q4_K_M", "path": "TinyLlama-1.1B-Chat-v1.0.Q4_K_M.gguf" }
-]}
-```
+`handlerType = "lora"` in `juno.ForwardPass` events confirms the adapter is active during inference.
 
 ---
 
-## 23. Changelog Summary
+## 23. LoRA Inference Overlay (`--lora-play`)
 
-| Session | Key Changes |
-|---------|-------------|
-| 1–3 | Foundation: sampler, tokenizer, registry, kvcache, coordinator stubs |
-| 4 | Real model: `GgufReader`, `LlamaConfig`, `LlamaTransformerHandler`, `GgufTokenizer`, prefill/decode split |
-| 5 | Bug fixes: TinyLlama template (ChatML→Zephyr), ▁ leak in streaming, Q6_K dequant loop |
-| 6 | Performance: parallel `matVec` (9× speedup), parallel shard loading, EOS piece suppression, FLOAT16 default |
-| 7 | Module restructure: `player` module extracted, `ModelLiveRunner` replaces `TinyLlamaLiveIT` |
-| 8 | `run.sh` / `run.bat` unified launcher, logback config, `ModelLiveRunner` all 6 tests green |
-| 9 | Session KV cache reuse (flat latency per turn), `InferenceRequest.sessionId`, `GenerationLoop.evictSession()` |
-| 10 | GPU acceleration: `MatVec` interface, `CudaMatVec` (cublasSgemv), `GpuContext`, `CudaAvailability`, `GpuForwardPassIT` |
-| 11 | Phi-3 family: `Phi3TransformerHandler` (fused QKV/FFN tensors), `ForwardPassHandlerLoader`, `QuantizedTensor` lazy dequant (OOM fix), vocab size fix, template routing fix |
-| 12 | Pure rename refactor: `GpuForwardPassHandler` merged into `LlamaTransformerHandler`, `CublasMatVec`→`CudaMatVec`, etc. |
-| 13 | Tensor parallel: `ParallelismType`, `TensorShardPlanner`, `TensorShardContext`, `TensorParallelPipelineClient`, `TensorParallelClusterIT`; `numHeads % 2 == 0` constraint (not worldSize); `LlamaTransformerHandler` OOM fix (lazy `QuantizedTensor` weights); ModelLiveRunner +2 tensor tests |
-| 14 | LoRA fine-tuning: `LoraAdapter`, `LoraAdapterSet`, `LoraAdamOptimizer`, `LoraTrainableHandler`; `transposedMatVec` Q5K/Q6K fix; ConsoleMain `lora` subcommand |
-| 15 | KV cache wired: `NodeKVCacheAdapter`, `EmbeddedNodeServer` wiring; JFR: `MatVecEvent`, `ForwardPassEvent`, `TokenizerEvent`, `TemplateFormatEvent`; `LlamaConfig.synthetic()` + `newTestInstance()` |
-| 16 | Naming cleanup applied to disk (session 12 renames actually executed, stale files deleted) |
-| 17 | AWS scripts: `scripts/aws/` with `launcher.sh`, `juno-infra.sh`, `juno-infra-ft.sh` |
-| 18 | Meta-Llama 3 GPT-2 BPE support in `GgufTokenizer`; `MatVecEvent` from quantised path; `TemplateFormatEvent` fix |
-| 19 | `metrics` module: `JfrMetricsExtractor`, `JfrModelMapper`, `MetricsMain`; JFR filename embeds model stem |
-| 20 | GPU inference actually wired end-to-end: `selectBackend()`, `DeviceFloatMatrix` device weights, `matVecLayer()` dispatch, JFR backend label fix (`"cpu"` for quantised path) |
-| 21 | `juno-deploy.sh`: unified AWS lifecycle script, web console in `InferenceApiServer`, verified on eu-north-1 |
-| 22 | Q2_K + Q3_K quantisation support |
-| 23 | Programmatic JFR lifecycle in `ConsoleMain` (local + cluster); `ClusterHarness.withJfr()`; `MetricsMain.extractToJsonMerged()`; `juno-deploy.sh --jfr`; `models.json` fixed |
-| 24 | Configurable activation byte order (`--byteOrder` / `juno.byteOrder` / `JUNO_BYTE_ORDER`); `ActivationCodec` static dispatcher; health + web badge |
-| 25 | `StubForwardPassHandler`, `CyclicForwardPassHandler` → test jar; docs sweep; `node` test-jar for IT consumers |
-| 26 | Phi-3 GPU: `DeviceHalfMatrix` + `cublasHSSgemvStridedBatched`; VRAM OOM → CPU quant fallback; `ConsoleMain` `--cpu` fallthrough fix; shared `CudaMatVec` in `runLocalRepl`; `cuda-resident-fp16` JFR label |
+### Overview
+
+Pre-trained `.lora` adapter files can be applied read-only at inference time in any mode without entering the training REPL.
+
+### Propagation chain
+
+```
+ConsoleMain
+  --lora-play PATH
+        │
+        ├── local mode
+        │     LoraAdapterSet.load(Path)
+        │     ForwardPassHandlerLoader.load(model, ctx, backend, adapters)
+        │     → LoraTrainableHandler (inference-only, no optimizer)
+        │
+        └── cluster mode
+              ClusterHarness.withLoraPlay(path)
+                    │
+                    └── launchNode()
+                          -Djuno.lora.play.path=PATH (per forked JVM)
+                                │
+                                └── EmbeddedNodeServer.NodeServiceImpl
+                                      loraPlayPath = System.getProperty("juno.lora.play.path")
+                                      loadShard() → LoraAdapterSet.load(Path.of(loraPlayPath))
+                                      ForwardPassHandlerLoader.load(..., adapters)
+```
+
+### AWS deployment chain
+
+```
+juno-deploy.sh --lora-play /abs/path/model.lora
+    │
+    ├── realpath() → absolute path (prevents relative-path mismatches)
+    ├── setup() validates [[ -f PATH ]] before launching any instances
+    │
+    └── _scp_lora_to_nodes() (called after bootstrap, before coordinator start)
+          For each node — synchronously:
+            1. scp  → /tmp/<basename>
+            2. systemctl stop juno-node   (synchronous, waits for JVM exit)
+            3. mv + chmod 644 /opt/juno/models/<basename>
+            4. sed -i 'JUNO_LORA_PLAY_PATH=/opt/juno/models/<basename>' /etc/juno/node.env
+            5. systemctl start juno-node  (synchronous, ~2s to bind gRPC)
+            6. [TRACE] node.env patch confirmed in log
+          Updates global LORA_PLAY_PATH to remote absolute path
+    │
+    └── _write_cluster_env_and_start_coordinator()
+          JUNO_LORA_PLAY_PATH=/opt/juno/models/<basename> → cluster-nodes.env
+          systemctl start juno-coordinator
+```
+
+The coordinator starts only after all nodes are confirmed active — loadShard RPCs always find nodes with adapters already loaded.
+
+### Known gotchas
+
+| Symptom | Cause | Fix |
+|---------|-------|-----|
+| `lora=none` in node log | `juno.lora.play.path` property not set | `--lora-play` missing, or wrong path |
+| Node log shows relative path | `realpath` not applied at parse time | Updated in Session 26 |
+| Coordinator starts before nodes have new env | `--no-block` restart; old instance seen as `active` | Synchronous stop+start per node (Session 26) |
+| `model load failed: ../models/...` | Relative path baked into `cluster-nodes.env` | `LORA_PLAY_PATH` updated to remote absolute path before coordinator starts (Session 26) |
+| cloud-init skips bootstrap script | Double base64 encoding via pre-encoded `--user-data` | Pass `file://` path to AWS CLI (Session 26) |
+| cloud-init sees ANSI codes before `#!/bin/bash` | `log()` calls in `_build_node_userdata` wrote to stdout | Redirect to stderr with `>&2` (Session 26) |
+
